--- a/.github/workflows/Setup&test.yml
+++ b/.github/workflows/Setup&test.yml
@@ -8,7 +8,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-ut:
+  build-unit-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,3 +29,25 @@ jobs:
 
     - name: Run unit tests
       run: npm run test:unit
+
+  build-ui-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository  
+      uses: actions/checkout@v3
+
+    - name: Use Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Install Playwright Browsers
+      run: npx playwright install
+
+    - name: Run unit tests
+      run: npm run test:ui
