--- a/.github/workflows/Setup&test.yml
+++ b/.github/workflows/Setup&test.yml
@@ -32,6 +32,7 @@ jobs:
 
   build-ui-tests:
     runs-on: ubuntu-latest
+    needs: build-unit-tests
 
     steps:
     - name: Checkout Repository  
