--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ jspm_packages
 .rts2_cache_cjs/
 .rts2_cache_es/
 .rts2_cache_umd/
+
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
